cmake_minimum_required(VERSION 3.29)
project(coding_test_c__)

set(CMAKE_CXX_STANDARD 20)

add_executable(1 c++연습/1/1.cpp
        c++연습/1/3.cpp)
add_executable(2 c++연습/1/2.cpp)
add_executable(3 c++연습/1/3.cpp)
add_executable(vertical_read simulation/bronze/10798.cpp)

add_executable(3048 simulation/silver/3048.cpp)
add_executable(10807 c++연습/배열/10807.cpp)
add_executable(10871 c++연습/배열/10871.cpp)
add_executable(10818 c++연습/배열/10818.cpp)
add_executable(2562 c++연습/배열/2562.cpp)
add_executable(10810 c++연습/배열/10810.cpp)
add_executable(10813 c++연습/배열/10813.cpp)
add_executable(5597 c++연습/배열/5597.cpp)
add_executable(3052 c++연습/배열/3052.cpp)
add_executable(10811 c++연습/배열/10811.cpp)
add_executable(1546 c++연습/배열/1546.cpp)